# phlex

./: CMakeLists.txt  phlex.code-workspace
.devcontainer/: devcontainer.json
Modules/private/: HandleSymbolVisibility.cmake
dev/: Dockerfile
form/core/: placement.cpp  placement.hpp  token.cpp  token.hpp
form/form/: config.cpp  form.cpp
form/mock_phlex/: phlex_toy_config.cpp  phlex_toy_core.cpp
form/persistence/: persistence.cpp
form/root_storage/: root_tbranch_container.cpp  root_tfile.cpp  root_ttree_container.cpp
form/storage/: storage.cpp  storage_association.cpp  storage_associative_container.cpp  storage_container.cpp  storage_container.hpp  storage_file.cpp  storage_file.hpp
phlex/: CMakeLists.txt  module.hpp  source.hpp
phlex/app/: load_module.cpp  phlex.cpp  run.cpp
phlex/core/: consumer.cpp  declared_fold.cpp  declared_observer.cpp  declared_output.cpp  declared_predicate.cpp  declared_transform.cpp  declared_unfold.cpp  edge_creation_policy.cpp  end_of_message.cpp  filter.cpp  message.cpp  (+9 more)
test/: allowed_families.cpp  cached_execution.cpp  cached_product_stores.cpp  class_registration.cpp  concepts.cpp  different_hierarchies.cpp  filter.cpp  filter_impl.cpp  fold.cpp  function_registration.cpp  hierarchical_nodes.cpp  level_counting.cpp  multiple_function_registration.cpp  product_handle.cpp  product_matcher.cpp  product_store.cpp  replicated.cpp  serializer.cpp  specified_label.cpp  string_literal.cpp  type_deduction.cpp  unfold.cpp  vector_of_abstract_types.cpp  yielding_driver.cpp
test/plugins/: CMakeLists.txt  module.cpp  source.cpp
(+46 files in other folders)
